merge: https://github.com/alibaba/fast-modeling-language/issues/4